--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit</artifactId>/*修改*/
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
